--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "expo": "~48.0.6",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
